[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "datasets>=3.5.0",
    "instructor>=1.7.9",
    "ollama>=0.4.8",
    "openai>=1.75.0",
    "outlines>=0.2.3",
    "sentencepiece>=0.2.0",
    "transformers>=4.51.3",
]
